--- a/assets/style.css
+++ b/assets/style.css
@@ -10791,3 +10791,25 @@ h2, .h2 {
   background: rgb(210, 88, 0);
   background: linear-gradient(0deg, rgb(210, 88, 0) 0%, rgb(162, 60, 0) 21%, rgb(180, 68, 0) 82%, rgb(230, 96, 0) 100%);
 }
+
+.presentation_section {
+  height: 40vh;
+  padding: 1em;
+}
+
+.section_title {
+  color: rgb(191, 72, 0);
+}
+
+.section_img {
+  background-image: url("./pngegg.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.section_img2 {
+  background-image: url("./pngegg1.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
